studentfiles/container-install/openshift/sam-openldap-template.yaml
apiVersion: v1
kind: Template
metadata:
  creationTimestamp: null
  name: ibm-sam-openldap
  annotations:
    openshift.io/display-name: IBM SAM OpenLDAP
    iconClass: icon-sso
objects:
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: ${APP_NAME}-ldaplib
    labels:
      app: ${APP_NAME}
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 50Mi
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: ${APP_NAME}-ldapslapd
    labels:
      app: ${APP_NAME}
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 50Mi
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: ${APP_NAME}-ldapsecauthority
    labels:
      app: ${APP_NAME}
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 50Mi
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
    creationTimestamp: null
    generation: 3
    labels:
      app: ${APP_NAME}
    name: ${APP_NAME}
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: ${APP_NAME}
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: ${APP_NAME}
      spec:
        serviceAccountName: ${SERVICE_ACCOUNT}
        containers:
        - args:
          - --copy-service
          image: docker.io/ibmcom/isam-openldap:${ISAM_VERSION}
          imagePullPolicy: IfNotPresent
          name: ${APP_NAME}
          ports:
          - containerPort: 636
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/ldap
            name: ${APP_NAME}-ldaplib
          - mountPath: /etc/ldap/slapd.d
            name: ${APP_NAME}-ldapslapd
          - mountPath: /var/lib/ldap.secAuthority
            name: ${APP_NAME}-ldapsecauthority
          - mountPath: /container/service/slapd/assets/certs
            name: ${APP_NAME}-keys
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        terminationGracePeriodSeconds: 30
        volumes:
        - name: ${APP_NAME}-ldapslapd
          persistentVolumeClaim:
            claimName: ${APP_NAME}-ldapslapd
        - name: ${APP_NAME}-ldaplib
          persistentVolumeClaim:
            claimName: ${APP_NAME}-ldaplib
        - name: ${APP_NAME}-ldapsecauthority
          persistentVolumeClaim:
            claimName: ${APP_NAME}-ldapsecauthority
        - name: ${APP_NAME}-keys
          secret:
            defaultMode: 420
            secretName: ${KEY_SECRET}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      app: ${APP_NAME}
    name: ${APP_NAME}
  spec:
    externalTrafficPolicy: Cluster
    ports:
    - name: ldaps
      port: 636
      protocol: TCP
      targetPort: 636
    selector:
      app: ${APP_NAME}
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
parameters:
  - description: Application Name
    name: APP_NAME
    value: openldap
  - description: ISAM Version to be deployed
    name: ISAM_VERSION
    value: 9.0.7.0
  - description: Domain
    name: DOMAIN
    value: ibm.com
  - description: Administrator Password
    name: ADMIN_PW
    value: Passw0rd
  - description: Config Password
    name: CONFIG_PW
    value: Passw0rd
  - description: Secret containing keys
    name: KEY_SECRET
    value: openldap-keys
  - description: Service Account
    name: SERVICE_ACCOUNT
    value: openldap
