studentfiles/container-install/openshift/isamconfig-route.yaml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  name: isam-config
  labels:
    app: isam-core
spec:
  host: isam.iamlab.ibm.com
  port:
    targetPort: lmi
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: isamconfig
    weight: 100
  wildcardPolicy: None
